added diagram to frontend

--- a/frontend/secrets.css
+++ b/frontend/secrets.css
@@ -30,9 +30,9 @@ th, td {
 #new_usr_button {
 	background-color: #14B7F0; /* B B Blue */
 	border: none;
-	color: white;
 	text-align: center;
 	text-decoration: none;
+	color: black;
  	cursor: pointer;
 	margin-top: 5px;
 }
